Leading text align fix

--- a/www/styles/main.css
+++ b/www/styles/main.css
@@ -37,4 +37,5 @@ body {
 
 #leadText {
   margin-bottom: 50px;
+  text-align: center;
 }
